--- a/rawniis-weird-webs-2025.css
+++ b/rawniis-weird-webs-2025.css
@@ -45,8 +45,51 @@ li:hover {
   vertical-align: top;
 }
 
+.rawnii {
+  position: relative;
+}
+
+.arm {
+  position: absolute;
+  left: 10px;
+  top: 800px;
+}
+
+.arm:hover {
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 1.5s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+}
+
 @keyframes pulse {
   50% {
     transform: scale(1.5);
+  }
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+@media screen and (max-width: 900px) {
+  .rawnii {
+    width: 400px;
+  }
+  .arm {
+    left: 10px;
+    top: 750px;
+    width: 200px;
   }
 }
