--- a/rawniis-weird-webs-2025.css
+++ b/rawniis-weird-webs-2025.css
@@ -8,7 +8,7 @@ h1 {
     text-align: center;
     animation-name: pulse;
     animation-duration: 2s;
-     animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
 }
 
 p {
@@ -26,7 +26,29 @@ ol {
 li:hover {
     color: yellow;
     font-family: "Tiny5";
-    font-size: 30px;
+    animation-name: expand;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    text-decoration: underline;
+}
+
+@keyframes pulse {
+  25% {
+    transform: scale(1.5);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  75% {
+    transform: rotate(-10deg);
+  }
+}
+
+@keyframes expand {
+  100% {
+    transform: translateX(25px);
+  }
 }
 
 .container {
@@ -45,14 +67,43 @@ li:hover {
   vertical-align: top;
 }
 
+.container-2 {
+  display: flex; /* Enables Flexbox for the container */
+  justify-content: flex-start; /* Distributes to the left */
+  align-items: center; /* Vertically centers items */
+  width: 100%;
+  padding: 20px;
+}
+
+.box-2 {
+  width: 45%; /* Sets width for each box */
+  padding: 10px;
+  text-align: left;
+  box-sizing: border-box; /* Includes padding and border in the width */
+  vertical-align: top;
+}
+
+.box-3 {
+  width: 45%; /* Sets width for each box */
+  padding: 10px;
+  text-align: left;
+  box-sizing: border-box; /* Includes padding and border in the width */
+  vertical-align: top;
+  background-color: black;
+  border: 8px double white;
+  z-index: 999;
+}
+
 .rawnii {
-  position: relative;
+  position: absolute;
+  top: 400px;
+  left: 20px;
 }
 
 .arm {
   position: absolute;
-  left: 10px;
-  top: 800px;
+  top: 750px;
+  left: 50px;
 }
 
 .arm:hover {
@@ -61,12 +112,6 @@ li:hover {
 
   /* When the animation is finished, start again */
   animation-iteration-count: infinite;
-}
-
-@keyframes pulse {
-  50% {
-    transform: scale(1.5);
-  }
 }
 
 @keyframes shake {
@@ -83,13 +128,13 @@ li:hover {
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
   .rawnii {
-    width: 400px;
+    width: 300px;
   }
   .arm {
-    left: 10px;
-    top: 750px;
-    width: 200px;
+    width: 150px;
+    top: 600px;
+    left: 30px;
   }
 }
