--- a/filters/the-prince.css
+++ b/filters/the-prince.css
@@ -63,6 +63,7 @@ a:hover {
     -webkit-transition: .2s;
     transition: opacity .2s;
     rotate: 90deg;
+    z-index: 99;
 }
 
 .slider::-webkit-slider-thumb {
