--- a/solids/a-suspicious-box-of-oranges.css
+++ b/solids/a-suspicious-box-of-oranges.css
@@ -29,7 +29,7 @@ a:hover {
     left: 0;
     width: 200px;
     background-color: #69414C;
-    border: 5px double white;
+    border: 5px solid white;
 }
 
 .button-2 {
@@ -38,7 +38,7 @@ a:hover {
   right: 0;
   width: 300px;
   background-color: #69414C;
-  border: 5px double white;
+  border: 5px solid white;
 }
 
 .button-1 p, .button-2 p {
