--- a/scramble/scramble.css
+++ b/scramble/scramble.css
@@ -26,7 +26,7 @@ a:hover {
     left: 0;
     width: 200px;
     background-color: #b86511;
-    border: 5px double white;
+    border: 5px solid white;
 }
 
 .button-2 {
@@ -35,7 +35,7 @@ a:hover {
   right: 0;
   width: 200px;
   background-color: #b86511;
-  border: 5px double white;
+  border: 5px solid white;
 }
 
 .button-1 p, .button-2 p {
