--- a/transparency/click-on-yu.css
+++ b/transparency/click-on-yu.css
@@ -105,7 +105,7 @@ a:hover {
     left: 0;
     width: 200px;
     background-color: #423354;
-    border: 5px double white;
+    border: 5px solid white;
 }
 
 .button-2 {
@@ -114,7 +114,7 @@ a:hover {
   right: 0;
   width: 200px;
   background-color: #423354;
-  border: 5px double white;
+  border: 5px solid white;
 }
 
 .button-1 p, .button-2 p {
